# MusicMetaLinker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
MusicMetaLinker/: audio_partitions.py  filter_partitions.py  link_partitions.py  partitions_map.py  prepare_dataset.py  preprocessor.py
MusicMetaLinker/audio_references/: isophonics.csv
MusicMetaLinker/clean_partitions/: clean_audio.py  clean_billboard.py  convert_folders.py
MusicMetaLinker/linking/: __init__.py  deezer_links.py  linking.py  musicbrainz_links.py  spotify_links.py  youtube_links.py
MusicMetaLinker/notebooks/: deezer_test.ipynb
audio_partition/: metadata.csv
audio_partitions/: metadata.csv
elka/: __init__.py  alignments.py  audio_partitions.py  deezer_download.py  deezer_search.py  download.py  luke_tests.ipynb  partitions_map.py  preprocessor.py  queries.ipynb  secrets.py  streamlit_download.py  utils.py
elka/alignment/: alignments.py  deezer_links.py  musicbrainz_links.py
elka/clean_partitions/: clean_billboard.py
elka/download/: streamlit_download.py
elka/linking/: __init__.py  acousticbrainz_links.py  deezer_links.py  linking.py  musicbrainz_links.py  spotify_links.py  youtube_links.py
elka/musicbrainz_db/: musicbrainz_dump.py
partitions/biab-internet-corpus/choco/: linking.csv
partitions/billboard/choco/: audio_files.csv  linking.csv
partitions/chordify/choco/: audio_files.csv  linking.csv
partitions/ireal-pro/choco/: linking.csv
partitions/robbie-williams/: README.txt
partitions/schubert-winterreise/: ann_release_metadata.csv
(+28585 files in other folders)
